--- a/src/app/material-component/grupo-imagens/grupo-imagens.component.html
+++ b/src/app/material-component/grupo-imagens/grupo-imagens.component.html
@@ -1,1 +1,32 @@
+<div class="container">
+  <h2>To do</h2>
 
+  <div cdkDropList #grupoAList="cdkDropList" [cdkDropListData]="grupoA"
+      [cdkDropListConnectedTo]="grupoBList" class="list" (cdkDropListDropped)="drop($event)">
+    <div class="list-item" *ngFor='let preview of grupoA' cdkDrag>
+      <!-- <img  [src]="preview" class="preview"> -->
+      <div>
+        <img  [src]="preview" class="preview">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-8">
+  <label class="btn btn-default p-0">
+    <input type="file" accept="image/*" multiple (change)="selectFiles($event)" />
+  </label>
+</div>
+
+<div class="container"> <h2>Done</h2>
+
+  <div cdkDropList #grupoBList="cdkDropList" [cdkDropListData]="grupoB"
+      [cdkDropListConnectedTo]="grupoAList" class="list" (cdkDropListDropped)="drop($event)">
+      <div class="list-item" *ngFor='let previewb of grupoB' cdkDrag>
+        <img  [src]="previewb" class="preview">
+      </div>
+  </div>
+
+  
+
+</div>
