--- a/src/app/material-component/tabela-csv/tabela-csv.component.html
+++ b/src/app/material-component/tabela-csv/tabela-csv.component.html
@@ -10,6 +10,8 @@
   />
 </mat-form-field>
 
+<button (click)="mostrarTodasColunas()">Mostrar todas as Colunas</button>
+
 <table 
   mat-table 
   [dataSource]="dataSource" 
@@ -20,14 +22,12 @@
   (cdkDropListDropped)="dropListDropped($event)"
   class="mat-elevation-z8">
   
-  
-
   <ng-container *ngFor="let column of columns; let i = index" [matColumnDef]="column.field">
-    <th mat-header-cell *matHeaderCellDef      
+    <th mat-header-cell *matHeaderCellDef  [hidden] = column.hidden
     mat-sort-header       
       cdkDrag
-      >
-      {{ column.field }}
+      >Col {{ column.field }}
+      <button (click)="removerColuna(i)">x</button>
     </ th>
     <td mat-cell *matCellDef="let row" > {{ row[column.field] }}  </td>
   </ng-container>
